Changed the channel to load in a router-outlet.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -18,5 +18,5 @@
       <app-side-nav [userData]="userData"></app-side-nav>
     </mat-drawer>
   </mat-drawer-container>
-  <app-main-message-area></app-main-message-area>
+  <router-outlet></router-outlet>
 </section>
