Data from the dialogs are added to new cahnnel

--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -23,10 +23,10 @@
 
     <mat-form-field class="example-chip-list" *ngIf="radioValue === 2">
       <mat-chip-grid #chipGrid aria-label="Enter fruits">
-        @for (fruit of fruits(); track fruit) {
+        @for (fruit of users(); track fruit) {
         <mat-chip-row (removed)="remove(fruit)">
-          <img src="assets/img/profile/elias.webp" alt="" />
-          {{ fruit }}
+          <img src="{{ fruit.photoURL }}" alt="" />
+          {{ fruit.userName }}
           <button matChipRemove [attr.aria-label]="'remove ' + fruit">
             <mat-icon>close</mat-icon>
           </button>
@@ -47,9 +47,9 @@
           #auto="matAutocomplete"
           (optionSelected)="selected($event)"
         >
-          @for (user of filteredUsersTest(); track user) {
+          @for (user of filteredUsers(); track user) {
           <mat-option [value]="user">
-            <img src="{{ user.photoUrl }}" alt="" />
+            <img src="{{ user.photoURL }}" alt="" />
             {{ user.userName }}
           </mat-option>
           }
