The new created channel is assigned to all users which are added

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -20,7 +20,7 @@
         <mat-panel-title class="expansion-panel-title">
           <div class="title-wrapper">
             <mat-icon class="material-symbols-outlined">workspaces</mat-icon>
-            Chanels
+            Channels
           </div>
           <button
             mat-icon-button
@@ -43,7 +43,7 @@
         class="button-secondary footer-button"
         (click)="openCreateChannelDialog()"
       >
-        <mat-icon class="material-symbols-outlined">add_circle</mat-icon>Chanel
+        <mat-icon class="material-symbols-outlined">add_circle</mat-icon>Channel
         hinzufügen
       </button>
     </mat-expansion-panel>
