--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -36,7 +36,7 @@
       @for (channel of allChannelsData; track $index) {
       <button
         class="button-secondary"
-        [routerLink]="['/channels', channel.channelId]"
+        routerLink="channel/{{ channel.channelId }}"
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
         >{{ channel.channelName }}
