Added the new message placeholder and filled the private chat history.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -72,7 +72,7 @@
       <span class="message">{{ message?.content }}</span>
       <div class="emoji-container d-none"></div>
       <div class="thread" *ngIf="message?.thread?.messages.length > 0">
-        <span (click)="mainMessageArea.toggleSidenav()" >
+        <span (click)="mainMessageArea.toggleSidenav(); channelService.setActualThread(message.thread)" >
           {{ message?.thread?.messages.length }} {{ message?.thread?.messages.length === 1 ? 'Antwort' : 'Antworten' }}
         </span>
         <span>
