landingpage forms now confirm with enter and optimize error messages for user

--- a/src/app/landing-page/login/reset-password/new-password/new-password.component.html
+++ b/src/app/landing-page/login/reset-password/new-password/new-password.component.html
@@ -1,5 +1,5 @@
 <div class="reset-password">
-  <mat-card>
+  <mat-card (keydown.enter)="changePassword()">
     <div class="headline">
       <mat-icon class="back-icon" (click)="navigateToLogin()"
         >arrow_back</mat-icon
