--- a/src/app/landing-page/register/register.component.html
+++ b/src/app/landing-page/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register">
-  <mat-card>
+  <mat-card (keydown.enter)="proceedToSelectAvatar()">
     <div class="headline">
       <mat-icon class="back-icon" (click)="navigateToLogin()"
         >arrow_back</mat-icon
