--- a/src/app/landing-page/login/login.component.html
+++ b/src/app/landing-page/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login">
-  <mat-card>
+  <mat-card (keydown.enter)="login()">
     <h1>Anmeldung</h1>
 
     <p>
@@ -10,18 +10,11 @@
     <div class="input-primary">
       <input [formControl]="email" placeholder="beispielname&#64;email.com" />
       <mat-icon>mail_outline</mat-icon>
-      <div *ngIf="email.invalid && email.touched" class="error-message">
-        Bitte eine gültige E-Mail-Adresse eingeben.
-      </div>
     </div>
 
     <div class="input-primary">
       <input [formControl]="password" type="password" placeholder="Passwort" />
       <mat-icon>lock_outline</mat-icon>
-      <!-- Fehlermeldung für ungültiges Passwort -->
-      <div *ngIf="password.invalid && password.touched" class="error-message">
-        Bitte ein Passwort eingeben.
-      </div>
     </div>
 
     <a class="link" (click)="navigateToResetPassword()">Passwort vergessen?</a>
