--- a/src/app/landing-page/login/reset-password/reset-password.component.html
+++ b/src/app/landing-page/login/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <div class="reset-password">
-  <mat-card>
+  <mat-card (keydown.enter)="sendPasswordResetEmail()">
     <div class="headline">
       <mat-icon class="back-icon" (click)="goBack()">arrow_back</mat-icon>
 
@@ -13,11 +13,6 @@
       <mat-icon>mail_outline</mat-icon>
     </div>
 
-    <p *ngIf="email.invalid && email.touched" class="error-message">
-      Bitte geben Sie eine gültige E-Mail-Adresse ein.
-    </p>
-
-    <p *ngIf="successMessage" class="success-message">{{ successMessage }}</p>
     <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
 
     <p>
