--- a/src/app/landing-page/register/register.component.html
+++ b/src/app/landing-page/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register">
-  <mat-card (keydown.enter)="proceedToSelectAvatar()">
+  <mat-card (keydown.enter)="checkEmailExistsAndProceed()">
     <div class="headline">
       <mat-icon class="back-icon" (click)="navigateToLogin()"
         >arrow_back</mat-icon
@@ -129,6 +129,35 @@
         </ng-container>
       </div>
     </div>
+
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+
+    <div class="checkbox-wrapper-33">
+      <label class="checkbox">
+        <input class="checkbox__trigger visuallyhidden" type="checkbox" />
+        <span class="checkbox__symbol">
+          <svg
+            aria-hidden="true"
+            class="icon-checkbox"
+            width="28px"
+            height="28px"
+            viewBox="0 0 28 28"
+            version="1"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M4 14l8 7L24 7"></path>
+          </svg>
+        </span>
+        <p class="checkbox__textwrapper">
+          Ich stimme der
+          <a href="#" class="link" [routerLink]="['/datenschutz']"
+            >Datenschutzerklärung</a
+          >
+          zu.
+        </p>
+      </label>
+    </div>
+
     <div class="next-button">
       <button
         mat-flat-button
@@ -137,7 +166,7 @@
           !registerForm.valid ||
           passwordControl.value !== confirmPasswordControl.value
         "
-        (click)="proceedToSelectAvatar()"
+        (click)="checkEmailExistsAndProceed()"
       >
         Weiter
       </button>
