Creating new private chat
Creating new private chat when clicking on other user in firestore

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -81,6 +81,7 @@
       <button
         *ngIf="user.displayName != userData.displayName"
         class="button-secondary"
+        (click)="openChatWithUser(user)"
       >
         <div class="image-with-badge">
           <img src="{{ user.photoURL }}" alt="" />
