--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -3,7 +3,7 @@
     <img src="./assets/img/Workspace logo.png" alt="" />
     <span>Devspace</span>
   </div>
-  <button mat-icon-button class="toolbar-icon">
+  <button mat-icon-button class="toolbar-icon" routerLink=".">
     <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
   </button>
 </mat-toolbar>
