Search bar filters all users and channels
The search bar filters all users and all channels and onclick routes to the channel or user message area

--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,4 +1,21 @@
-<div class="search-field">
-  <input placeholder="{{ placeholder }}" />
+<div mat-form-field class="search-field">
+  <input
+    matInput
+    [formControl]="inputControl"
+    [matAutocomplete]="auto"
+    placeholder="{{ placeholder }}"
+  />
   <mat-icon *ngIf="searchIconExists">search</mat-icon>
+  <mat-autocomplete
+    #auto="matAutocomplete"
+    (optionSelected)="onOptionSelected($event.option)"
+  >
+    <mat-option
+      *ngFor="let option of filteredOptions | async"
+      [value]="getOptionName(option)"
+      [id]="getOptionId(option)"
+    >
+      {{ getOptionName(option) }}
+    </mat-option>
+  </mat-autocomplete>
 </div>
