--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -139,8 +139,8 @@
     border: 3px solid var(--text-color);
     background-color: var(--grey-color);
     position: absolute;
-    bottom: 8%;
-    right: 0;
+    bottom: 2%;
+    right: -2%;
   }
 
   .badge.online {
