--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -37,6 +37,8 @@
       <button
         class="button-secondary"
         routerLink="channel/{{ channel.channelId }}"
+        routerLinkActive="active"
+        (click)="activeButton = 0"
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
         >{{ channel.channelName }}
@@ -69,7 +71,11 @@
           </div>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <button class="button-secondary">
+      <button
+        class="button-secondary"
+        (click)="openChatWithUser(userData, 1)"
+        [ngClass]="{ active: activeButton === 1 }"
+      >
         <div class="image-with-badge">
           <img src="{{ userData.photoURL }}" alt="" />
           <div class="badge" style="background-color: #92c83e"></div>
@@ -81,7 +87,8 @@
       <button
         *ngIf="user.displayName != userData.displayName"
         class="button-secondary"
-        (click)="openChatWithUser(user)"
+        (click)="openChatWithUser(user, $index + 2)"
+        [ngClass]="{ active: activeButton === $index + 2 }"
       >
         <div class="image-with-badge">
           <img src="{{ user.photoURL }}" alt="" />
