--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -38,7 +38,7 @@
         class="button-secondary"
         routerLink="channel/{{ channel.channelId }}"
         routerLinkActive="active"
-        (click)="activeButton = 0"
+        (click)="activeButtonService.setActiveButton('')"
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
         >{{ channel.channelName }}
@@ -73,8 +73,10 @@
       </mat-expansion-panel-header>
       <button
         class="button-secondary"
-        (click)="openChatWithUser(userData, 1)"
-        [ngClass]="{ active: activeButton === 1 }"
+        (click)="openChatWithUser(userData, userData.uid + '_' + userData.uid)"
+        [ngClass]="{
+          active: isActiveButton(userData.uid + '_' + userData.uid)
+        }"
       >
         <div class="image-with-badge">
           <img src="{{ userData.photoURL }}" alt="" />
@@ -87,8 +89,8 @@
       <button
         *ngIf="user.displayName != userData.displayName"
         class="button-secondary"
-        (click)="openChatWithUser(user, $index + 2)"
-        [ngClass]="{ active: activeButton === $index + 2 }"
+        (click)="openChatWithUser(user, userData.uid + '_' + user.uid)"
+        [ngClass]="{ active: isActiveButton(userData.uid + '_' + user.uid) }"
       >
         <div class="image-with-badge">
           <img src="{{ user.photoURL }}" alt="" />
