Added new ids to the channelmessages and the threadmessages.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -6,6 +6,7 @@ section {
     justify-content: flex-end;
     color: black;
     font-family: var(--font-nunito);
+    white-space: pre-wrap;
   }
   
   .chat-history-daily-container-other-people {
