--- a/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
+++ b/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
@@ -1,6 +1,10 @@
 <section>
   <div class="textarea-container">
-    <textarea placeholder="Nachricht an #Entwicklerteam" id="" [(ngModel)]="newMessageContent" (keydown.enter)="sendMessage(); $event.preventDefault();"></textarea>
+    <textarea 
+      placeholder="Antworten..." 
+      [(ngModel)]="newMessageContent"
+      (keydown.enter)="sendMessage(); $event.preventDefault();" 
+    ></textarea>
     <div class="icons-container">
       <div class="left-icons">
         <mat-icon class="material-symbols-outlined">add</mat-icon>
@@ -8,8 +12,10 @@
         <mat-icon class="material-symbols-outlined">sentiment_satisfied</mat-icon>
         <mat-icon class="material-symbols-outlined">alternate_email</mat-icon>
       </div>
-      <mat-icon (click)="sendMessage()">send</mat-icon>
+      <mat-icon (click)="sendMessage()" class="send-icon">send</mat-icon>
     </div>
   </div>
 </section>
 
+  
+  
