--- a/src/app/main/main-message-area/thread/thread.component.html
+++ b/src/app/main/main-message-area/thread/thread.component.html
@@ -1,5 +1,5 @@
 <section>
     <app-thread-header></app-thread-header>
-    <app-thread-chat-history></app-thread-chat-history>
-    <app-message-area-new-message></app-message-area-new-message>
+    <app-thread-chat-history [currentUserId]="currentUserId"></app-thread-chat-history>
+    <app-thread-new-message></app-thread-new-message>
 </section>
