--- a/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
@@ -44,6 +44,8 @@
   
   .mat-mdc-card-content {
     padding: 0;
+    display: flex;
+    justify-content: space-between;
   
     &:first-child,
     &:last-child {
