--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -10,7 +10,7 @@
       }"
       id="add-emoji-container2"
     >
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -24,7 +24,7 @@
           />
         </svg>
       </div>
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -38,7 +38,7 @@
           />
         </svg>
       </div>
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -63,17 +63,17 @@
       'message-container-hover': isEmojiContainerVisible === 1
     }"
   >
-    <img src="{{ message?.user?.photoURL }}" alt="Profile Picture" />
+    <img src="{{ message?.user?.photoURL }}" alt="Profile Picture" (click)="channelService.openProfileInfo(message?.user)"/>
     <div class="text-container">
       <div class="name-and-time">
-        <span class="name">{{ message?.user?.userName }}</span>
+        <span class="name" (click)="channelService.openProfileInfo(message?.user)">{{ message?.user?.userName }}</span>
         <span class="time">{{ message?.time | date: 'HH:mm' }} Uhr</span>
       </div>
       <span class="message">{{ message?.content }}</span>
       <div class="emoji-container d-none"></div>
-      <div class="thread" *ngIf="message?.thread?.messages.length > 0">
-        <span (click)="mainMessageArea.toggleSidenav(); channelService.setActualThread(message.thread)" >
-          {{ message?.thread?.messages.length }} {{ message?.thread?.messages.length === 1 ? 'Antwort' : 'Antworten' }}
+      <div class="thread" *ngIf="message?.thread?.length > 0">
+        <span (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)" >
+          {{ message?.thread?.length }} {{ message?.thread?.length === 1 ? 'Antwort' : 'Antworten' }}
         </span>
         <span>
           Letzte Antwort: {{ getLastReplyTime(message.thread.messages) }}
