--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
@@ -9,7 +9,7 @@
       }"
       id="add-emoji-container1"
     >
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -23,7 +23,7 @@
           />
         </svg>
       </div>
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -37,7 +37,7 @@
           />
         </svg>
       </div>
-      <div>
+      <div (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message)">
         <svg
           width="23"
           height="21"
@@ -62,16 +62,16 @@
       'message-container-hover': isEmojiContainerVisible === 2
     }"
   >
-    <img src="{{ message?.user?.photoURL }}" alt="Profile Picture" />
+    <img src="{{ message?.user?.photoURL }}" alt="Profile Picture" (click)="channelService.openProfileInfo(message?.user)"/>
     <div class="text-container">
       <div class="name-and-time-own">
-        <span class="name">{{ message?.user?.userName }}</span>
+        <span class="name" (click)="channelService.openProfileInfo(message?.user)">{{ message?.user?.userName }}</span>
         <span class="time">{{ message?.time | date: 'HH:mm' }} Uhr</span>
       </div>
       <span class="message-own">{{ message?.content }}</span>
       <div class="emoji-container d-none"></div>
-      <div class="thread-own" *ngIf="message?.thread?.messages.length > 0">
-        <span (click)="mainMessageArea.toggleSidenav(); channelService.setActualThread(message.thread)"> {{ message?.thread?.messages.length }} {{ message?.thread?.messages.length === 1 ? 'Antwort' : 'Antworten' }} </span>
+      <div class="thread-own" *ngIf="message?.thread?.length > 0">
+        <span (click)="mainMessageArea.toggleSidenav(); threadService.setActualMessage(message.thread)"> {{ message?.thread?.length }} {{ message?.thread?.length === 1 ? 'Antwort' : 'Antworten' }} </span>
         <span>Letzte Antwort: {{ getLastReplyTime(message.thread.messages) }}</span>
       </div>
     </div>
