--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -2,7 +2,7 @@
   <mat-card appearance="outlined" class="mat-card-container">
     <mat-card-content>
       <app-message-area-header></app-message-area-header>
-      <app-message-area-chat-history></app-message-area-chat-history>
+      <app-message-area-chat-history [currentUserId]="currentUserId"></app-message-area-chat-history>
       <app-message-area-new-message></app-message-area-new-message>
     </mat-card-content>
   </mat-card>
@@ -10,7 +10,7 @@
 <mat-sidenav-container class="example-container" *ngIf="shouldRun">
   <mat-sidenav #sidenav mode="side" [(opened)]="opened" position="end"
     >
-    <app-thread></app-thread>
+    <app-thread [currentUserId]="currentUserId"></app-thread>
   </mat-sidenav>
   <mat-sidenav-content> </mat-sidenav-content>
 </mat-sidenav-container>
