--- a/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
+++ b/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar>
   <h3>Neue Nachricht</h3>
-  <div class="input-secondary">
-    <input placeholder="An: #channel, oder @jemand oder E-Mail-Adresse" />
-  </div>
+  <app-search-bar
+    [placeholder]="'An: #channel, oder @jemand oder E-Mail-Adresse'"
+    [searchIconExists]="true"
+  ></app-search-bar>
 </mat-toolbar>
