--- a/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.scss
@@ -24,10 +24,6 @@
     color: var(--black-color) !important;
   }
 
-  .input-secondary {
-    width: 100%;
-    input {
-      width: 100%;
-      padding: 16px 16px 16px 32px;
-    }
+  app-search-bar {
+    width: 100%; 
   }
