Added some functions to channel header section. The admin is now able to edit the name and description of the channel.

--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-name/channel-display-name.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-name/channel-display-name.component.html
@@ -1,7 +1,7 @@
 <section class="edit-channel-name-container">
 <div class="headline">
     <span>Channel-Name</span>
-    <button (click)="description.toggleEditName()">Bearbeiten</button>
+    <button (click)="description.toggleEditName()" *ngIf="userIsAdmin()">Bearbeiten</button>
   </div>
   <div class="input-primary d-none">
     <input type="text" placeholder="Dein Text hier" />
