--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
@@ -1,12 +1,12 @@
 <div class="description-container">
-    <div class="description-container-headline">
-      <span>Beschreibung</span>
-      <button (click)="description.toggleEditDescription()">Bearbeiten</button>
-    </div>
-    <span>{{currentChannel?.description}}</span>
-    <div class="blue-line"></div>
-    <div class="created-by-container">
-      <span>Erstellt von</span>
-      <span>{{currentChannel?.admin?.userName}}</span>
-    </div>
+  <div class="description-container-headline">
+    <span>Beschreibung</span>
+    <button (click)="description.toggleEditDescription()" *ngIf="userIsAdmin()">Bearbeiten</button>
   </div>
+  <span>{{ currentChannel?.description }}</span>
+  <div class="blue-line"></div>
+  <div class="created-by-container">
+    <span>Erstellt von</span>
+    <span>{{ currentChannel?.admin?.userName }}</span>
+  </div>
+</div>
