--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 45px;
   
     span {
       font-size: 18px;
