--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
@@ -1,3 +1,232 @@
+::ng-deep {
+  .mdc-line-ripple {
+    &::before {
+      border-bottom-width: 0px !important;
+    }
+    &::after {
+      border-bottom-width: 0px !important;
+    }
+  }
+
+  .mat-mdc-dialog-container .mdc-dialog__surface {
+    border-radius: 30px;
+  }
+  .mat-mdc-radio-button
+    .mdc-radio
+    .mdc-radio__native-control:enabled:checked
+    + .mdc-radio__background
+    .mdc-radio__outer-circle {
+    border-color: var(--purple1-color) !important;
+  }
+
+  .mat-mdc-radio-button
+    .mdc-radio
+    .mdc-radio__native-control:enabled
+    + .mdc-radio__background
+    .mdc-radio__inner-circle {
+    border-color: var(--purple1-color) !important;
+  }
+
+  .mat-mdc-radio-button.mat-mdc-radio-checked .mat-ripple-element {
+    background-color: var(--light-purple-color);
+  }
+
+  .mat-mdc-radio-button.mat-accent {
+    --mdc-radio-selected-focus-icon-color: var(--purple1-color) !important;
+    --mdc-radio-selected-hover-icon-color: var(--purple1-color) !important;
+    --mdc-radio-selected-icon-color: var(--purple1-color) !important;
+    --mdc-radio-selected-pressed-icon-color: var(--purple1-color) !important;
+    --mat-radio-checked-ripple-color: var(--purple1-color) !important;
+  }
+
+  mat-mdc-form-field {
+    width: 100% !important;
+  }
+
+  .mat-mdc-form-field-subscript-wrapper {
+    display: none !important;
+  }
+
+  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: var(--white-color) !important;
+  }
+
+  .mat-mdc-text-field-wrapper:hover .mat-mdc-form-field-focus-overlay {
+    opacity: 0 !important;
+  }
+
+  .mat-mdc-form-field-focus-overlay {
+    background-color: unset !important;
+  }
+
+  .mdc-evolution-chip-set .mdc-evolution-chip-set__chips {
+    margin-left: 0 !important;
+  }
+
+  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) {
+    background-color: var(--bg-color) !important;
+  }
+
+  mat-icon,
+  mat-icon.mat-primary,
+  mat-icon.mat-accent,
+  mat-icon.mat-warn {
+    color: var(--grey-color);
+  }
+
+  .mat-mdc-chip.mdc-evolution-chip--with-trailing-action
+    .mat-mdc-chip-action-label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .mat-mdc-dialog-container-with-actions .mat-mdc-dialog-content {
+    padding: 10px 0 4px 0 !important;
+  }
+
+  .mat-mdc-chip-remove .mat-icon {
+    width: 10px;
+    height: 10px;
+    font-size: 16px;
+    box-sizing: content-box;
+    color: black;
+    font-weight: bold;
+
+    &:hover {
+      color: var(--purple1-color);
+    }
+  }
+
+  .mat-mdc-option .mdc-list-item__primary-text {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    img {
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+    }
+  }
+
+  .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above)
+    div.mat-mdc-autocomplete-panel {
+    border-radius: 20px !important;
+    border-top-left-radius: 0 !important;
+  }
+
+  .mat-mdc-autocomplete-panel-above div.mat-mdc-autocomplete-panel {
+    border-radius: 20px !important;
+    border-bottom-left-radius: 0 !important;
+  }
+
+  div.mat-mdc-autocomplete-panel.mat-mdc-autocomplete-visible {
+    padding-inline: 30px;
+  }
+
+  div.mat-mdc-autocomplete-panel {
+    width: 60% !important;
+  }
+
+  .mat-mdc-option.mdc-list-item {
+    border-radius: 40px;
+  }
+
+  .mat-mdc-option:hover:not(.mdc-list-item--disabled) {
+    background-color: var(--bg-color) !important;
+  }
+}
+
+.dialog-wrapper {
+  color: var(--black-color);
+  padding: 40px;
+  width: 710px;
+
+  .header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    mat-icon {
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  mat-dialog-content {
+    .radio-group {
+      display: flex;
+      flex-direction: column;
+
+      .channel-name {
+        color: var(--purple1-color);
+      }
+    }
+
+    .example-chip-list {
+      width: 100%;
+    }
+  }
+
+  mat-form-field {
+    font-family: var(--font-nunito);
+    width: 100% !important;
+
+    mat-chip-grid {
+      padding: 2px 10px;
+      border-radius: 42px;
+      border: 1px solid var(--light-purple-color);
+      &:hover {
+        outline: 1px solid var(--purple2-color);
+      }
+      &:focus-visible {
+        outline: 2px solid var(--purple1-color);
+      }
+
+      mat-chip-row {
+        img {
+          height: 30px;
+          width: 30px;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    // mat-autocomplete {
+    //   p {
+    //     &:hover {
+    //       cursor: pointer;
+    //     }
+    //   }
+    // }
+  }
+}
+.image-with-badge {
+  cursor: pointer;
+  position: relative;
+  img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+  }
+
+  .badge {
+    height: 28%;
+    width: 28%;
+    border-radius: 50%;
+    border: 3px solid var(--text-color);
+    background-color: var(--grey-color);
+    position: absolute;
+    bottom: 8%;
+    right: 0;
+  }
+
+  .badge.online {
+    background-color: var(--online-color);
+  }
+}
+
+
 section {
     color: black;
     font-family: var(--font-nunito);
@@ -50,18 +279,11 @@ section {
       display: flex;
       align-items: center;
 
-      svg {
+      mat-icon {
         width: 16px;
         height: 16px;
+        color: var(--purple2-color);
       }
-    }
-  }
-
-  .input-container {
-    width: 100%;
-
-    .input {
-      width: 100%;
     }
   }
 
