--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -1,3 +1,18 @@
+::ng-deep {
+  :root {
+    --border-radius: 0px 30px 30px 30px;
+  }
+
+  .mat-mdc-menu-panel {
+    border-radius: var(--border-radius) !important;
+    box-shadow: 0px 6px 10px 0px #00000033 !important;
+    padding: 0;
+    max-width: unset !important;
+  }  
+}
+
+
+
 :host {
   width: 100%;
   height: 10svh !important;
@@ -45,21 +60,6 @@ mat-toolbar {
   }
 }
 
-#mat-menu-panel-0 {
-  border-radius: 0px 30px 30px 30px;
-  box-shadow: 0px 6px 10px 0px #00000033;
-  padding: 0;
-  max-width: unset;
-}
-
-#mat-menu-panel-1,
-#mat-menu-panel-2 {
-  border-radius: 30px 0px 30px 30px;
-  box-shadow: 0px 6px 10px 0px #00000033;
-  padding: 10px 20px;
-  max-width: unset;
-}
-
 .cdk-overlay-container {
   background-color: rgba($color: #000000, $alpha: 0.2);
 }
@@ -98,7 +98,8 @@ mat-toolbar {
     margin-left: 10px;
   }
 
-  &:hover, &.menu-opened {
+  &:hover,
+  &.menu-opened {
     background-color: var(--bg-color);
     cursor: pointer;
 
@@ -123,7 +124,8 @@ mat-toolbar {
     height: 14px;
   }
 
-  &:hover, &.menu-opened {
+  &:hover,
+  &.menu-opened {
     translate: 0 -1px;
     transform: scale(1.002);
     cursor: pointer;
