--- a/src/app/main/main-message-area/thread/thread-header/thread-header.component.html
+++ b/src/app/main/main-message-area/thread/thread-header/thread-header.component.html
@@ -16,5 +16,5 @@
     <!-- <mat-icon class="material-symbols-outline">tag</mat-icon> -->
     <span>Entwicklerteam</span>
   </div>
-  <mat-icon (click)="mainMessageArea.toggleSidenav()">close</mat-icon>
+  <mat-icon (click)="mainMessageArea.closeSidenav()">close</mat-icon>
 </section>
