--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -7,31 +7,10 @@ section {
     color: black;
     font-family: var(--font-nunito);
     white-space: pre-wrap;
-  }
-  
-  .chat-history-daily-container-other-people {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-  
-  .chat-history-daily-container-own {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end; /** add this */
-    justify-content: flex-start;
-  }
-  
-  
-  .date-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 10px 20px 0px 20px;
+
+    mat-icon {
+      color: var(--black-color);
+    }
   }
   
   .first-line,
@@ -41,28 +20,10 @@ section {
     background-color: var(--light-purple-color);
   }
   
-  .date {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 400;
-    border: 1px solid var(--light-purple-color);
-    border-radius: 30px;
-    padding: 5px 10px;
-  }
-  
   .add-emoji-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 100%;
-    padding: 0 30px;
-  }
-  
-  .add-emoji-container-own {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; /** add this */
     width: 100%;
     padding: 0 30px;
   }
@@ -103,20 +64,10 @@ section {
     opacity: 1 !important;
     cursor: pointer;
   }
-  
+ 
   .message-container {
     width: 100%;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: 10px 30px;
-    gap: 20px;
-  }
-  
-  .message-container-own {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse; /* add this */
     align-items: flex-start;
     justify-content: flex-start;
     padding: 10px 30px;
@@ -179,15 +130,6 @@ section {
     width: fit-content;
   }
   
-  .message-own {
-    border-radius: 30px 0px 30px 30px;
-    background-color: var(--purple2-color); /* add this */
-    padding: 10px 20px;
-    position: relative;
-    display: flex;
-    color: var(--text-color); /* add this */
-  }
-  
   .thread {
     display: flex;
     gap: 20px;
@@ -206,24 +148,3 @@ section {
       font-size: 14px;
     }
   }
-  
-  .thread-own {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: flex-end; /* add this */
-  
-    span:first-of-type {
-      color: var(--purple3-color);
-  
-      &:hover {
-        font-weight: 700 !important;
-      }
-    }
-  
-    span:last-of-type {
-      color: var(--grey-color);
-      font-size: 14px;
-    }
-  }
-  
