Switched the other and own message templates in the channels to show the actual count of the messages in the thread.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -52,14 +52,14 @@
       </div>
       <span class="message">{{ message?.content }}</span>
       <div class="emoji-container d-none"></div>
-      <div class="thread" *ngIf="message?.thread?.length > 0">
-        <span (click)="mainMessageArea.openSidenav(); threadService.setActualMessage(message)" >
-          {{ message?.thread?.length }} {{ message?.thread?.length === 1 ? 'Antwort' : 'Antworten' }}
+      <div class="thread" *ngIf="message?.thread && threadKeys.length > 0">
+        <span (click)="mainMessageArea.openSidenav(); threadService.setActualMessage(message)">
+          {{ threadKeys.length }} {{ threadKeys.length === 1 ? 'Antwort' : 'Antworten' }}
         </span>
         <span>
-          Letzte Antwort: {{ getLastReplyTime(message.thread.messages) }}
+          Letzte Antwort: {{ getLastReplyTime(message.thread) }}
         </span>
-      </div>
+      </div>           
     </div>
   </div>
 </section>
