--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.scss
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.scss
@@ -37,3 +37,23 @@
     color: var(--text-color); 
     width: fit-content;
   }
+
+  .thread-own {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-end; /* add this */
+  
+    span:first-of-type {
+      color: var(--purple3-color);
+  
+      &:hover {
+        font-weight: 700 !important;
+      }
+    }
+  
+    span:last-of-type {
+      color: var(--grey-color);
+      font-size: 14px;
+    }
+  }
