Added a matmenu with ngx emoji mart picker. The user is now able to pick and send emojis at the channel area.

--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -1,28 +1,25 @@
 <section class="text-container">
-  <div class="name-and-time-own">
-    <span
-      class="name"
-      (click)="channelService.openProfileInfo(message?.user)"
-      >{{ message?.user?.userName }}</span
-    >
-    <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
-  </div>
-  
-  <span class="message-own">
-    {{ temporaryMessageContent || message?.content }}
-  </span>
-  
-  <div class="emoji-container d-none"></div>
-  <div class="thread-own" *ngIf="message?.thread && threadKeys.length > 0">
-    <span
-      (click)="
-        mainMessageArea.openSidenav();
-        threadService.setActualMessage(message.thread)"
-    >
-    {{ threadKeys.length }} {{ threadKeys.length === 1 ? 'Antwort' : 'Antworten' }}
-    </span>
-    <span>
-      Letzte Antwort: {{ getLastReplyTime(message.thread) }}
-    </span>
-  </div>
-</section>
+    <div class="name-and-time-own">
+      <span
+        class="name"
+        (click)="channelService.openProfileInfo(message?.user)"
+        >{{ message?.user?.userName }}</span
+      >
+      <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
+    </div>
+    <span class="message-own">{{ message?.content }}</span>
+    <div class="emoji-container d-none"></div>
+    <div class="thread-own" *ngIf="message?.thread && threadKeys.length > 0">
+      <span
+        (click)="
+          mainMessageArea.openSidenav();
+          threadService.setActualMessage(message.thread)
+        "
+      >
+      {{ threadKeys.length }} {{ threadKeys.length === 1 ? 'Antwort' : 'Antworten' }}
+      </span>
+      <span
+        >Letzte Antwort: {{ getLastReplyTime(message.thread) }}</span
+      >
+    </div>
+  </section>
