--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -22,12 +22,12 @@
     <!-- ################ -->
 
     <mat-form-field class="example-chip-list" *ngIf="radioValue === 2">
-      <mat-chip-grid #chipGrid aria-label="Enter fruits">
-        @for (fruit of users(); track fruit) {
-        <mat-chip-row (removed)="remove(fruit)">
-          <img src="{{ fruit.photoURL }}" alt="" />
-          {{ fruit.userName }}
-          <button matChipRemove [attr.aria-label]="'remove ' + fruit">
+      <mat-chip-grid #chipGrid aria-label="Enter users">
+        @for (user of users(); track user) {
+        <mat-chip-row (removed)="remove(user)">
+          <img src="{{ user.photoURL }}" alt="" />
+          {{ user.userName }}
+          <button matChipRemove [attr.aria-label]="'remove ' + user">
             <mat-icon>close</mat-icon>
           </button>
         </mat-chip-row>
@@ -35,13 +35,14 @@
         <input
           name="currentUser"
           placeholder="User hinzufügen..."
-          #fruitInput
+          #userInput
           [(ngModel)]="currentUser"
           [matChipInputFor]="chipGrid"
           [matAutocomplete]="auto"
           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
           (matChipInputTokenEnd)="add($event)"
           [matChipInputAddOnBlur]="false"
+          [formControl]="myControl"
         />
         <mat-autocomplete
           #auto="matAutocomplete"
