Open direct messages chat from profile info

--- a/src/app/shared/profile-info-dialog/profile-info-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/profile-info-dialog.component.html
@@ -27,6 +27,13 @@
     class="button-wrapper"
     [ngStyle]="{ display: !ownProfile ? 'flex' : 'none' }"
   >
-    <button class="button-primary">Private Nachricht</button>
+    <button
+      class="button-primary"
+      (click)="
+        openChatWithUser(userData, userService.userId + '_' + userData.uid)
+      "
+    >
+      Private Nachricht
+    </button>
   </div>
 </mat-card>
